--- a/jasmine-standalone-5.1.1/SpecRunner.html
+++ b/jasmine-standalone-5.1.1/SpecRunner.html
@@ -15,9 +15,11 @@
 
  <script src="utilis/monyTest.js" type="module"></script>
  <script src="data/cartTest.js" type="module"></script>
+ <script src="checkOut/orderSummaryTest.js" type="module"></script>
 
 </head>
 
 <body>
+  <div class="js-test-container"></div>
 </body>
 </html>
